# blog-article-skill

./: .env.example  .gitignore  README.md  SKILL.md  SKILLS.md  _save_summary.py  hello.py  pyproject.toml
assets/: __init__.py  _save_summary.py  ai_provider.py  base.py  feishu.py  local.py  main.py  manager.py  obsidian.py  prompt.py  run.py
references/: config.md
