[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "blog-article-skill"
version = "1.0.0"
description = "文章总结与输出技能：支持将博客链接或原文总结成结构化笔记，并输出到本地、Obsidian或飞书知识库"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
async = [
    "aiohttp>=3.9",
]
openai = [
    "openai>=1.0",
]
anthropic = [
    "anthropic>=0.30",
]
google = [
    "google-genai>=1.0",
]

[project.scripts]
blog-article-skill = "assets.run:main"

[tool.setuptools.packages.find]
where = ["."]